# Samples

./: README.md
C/data_structures/Queue/: CMakeLists.txt
C/data_structures/Queue/include/: Queue.h
C/data_structures/Queue/src/: Queue.c  Queue_Demo.c
C/other/data_types/: CMakeLists.txt  build.sh
C/other/data_types/include/: DataTypes.h
C/other/data_types/src/: DataTypes.c  DataTypes_Demo.c
Python/argparse/: argParse.py
Python/dataTypes/: dataTypes.py
Python/simpleArith/: arithmetic_4.2.3.py
